tests/should-fail/semantics/constant-fn-1.j
globals
    integer x
endglobals
constant function foo takes nothing returns nothing
    set x = 1
endfunction
